# vit-masked-face-net

./: .gitignore  .pre-commit-config.yaml  README.md  grad_cam.py  main.ipynb  main.py  pyproject.toml  setup.cfg  skripsi-v11.py  test.py
demo/: .gitignore  app.py  classes.txt  requirements.txt
journal/: CPCNVAtemplateTEupdate.aux  CPCNVAtemplateTEupdate.fdb_latexmk  CPCNVAtemplateTEupdate.fls  CPCNVAtemplateTEupdate.tex  CPCNVAtemplateTEupdate.xdv
journal/SMHL-template/: model5-names.bst  smhl-template.bbl  smhl-template.blg  smhl-template.fdb_latexmk  smhl-template.fls  smhl-template.out  smhl-template.tex  smhl-template.xdv  smhl.sty
journal/ViT-MFN-Aug/: smhl-logo.eps  smhl-template.aux  smhl-template.fdb_latexmk  smhl-template.fls  smhl-template.tex  smhl-template.xdv  smhl.sty
latex/: all_acc.eps  aug_acc.eps  augment.eps  mask.eps  mask_chin.eps  mask_mouth_chin.eps  mask_nose_mouth.eps  mfn.eps  size_acc.eps  template.tex  tl_acc.eps  val_efefeacc_vit.eps
notebooks/: cam.ipynb  res.ipynb  test_cm.ipynb  test_max.ipynb  vit_cam.ipynb
results/: finals.csv  test_finals.csv  test_merged_results.csv  train_merged_results.csv
results/test/: resnet152_pretrained_test.csv  vit_base_16_augment_pretrained_test.csv  vit_base_16_augment_test.csv  vit_base_16_pretrained_test.csv  vit_base_16_test.csv  vit_huge_14_augment_pretrained_test.csv  vit_huge_14_augment_test.csv  vit_huge_14_pretrained_test.csv  vit_huge_14_test.csv  vit_large_16_test.csv  (+3 more)
src/: config.py  data.py  demo.py  demo_deploy.py  main.py
template/: elsarticle.cls  refs.bib  smhl-template.tex
(+58 files in other folders)
